# Options-Trading

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ibkr-options-engine.example.toml  ibkr-options-engine.paper-trading.toml
Python Code/: 250604_FinnHub_Dual_Key_Analysis_from_Input_Files.py  Russell3000_tickers_V2.csv  options_analysis_settings.txt
crates/ibkr-options-engine/: Cargo.toml
crates/ibkr-options-engine/logs/: ibkr-order-events-20260420-183843-DU1234567-AAPL-10.json  ibkr-order-events-20260420-191551-DU1234567-AAPL-10.json  ibkr-order-events-20260420-191637-DU1234567-AAPL-10.json  ibkr-order-events-20260420-193323-DU1234567-AAPL-10.json  ibkr-order-events-20260420-195000-DU1234567-AAPL-10.json  ibkr-order-events-20260420-201859-DU1234567-AAPL-10.json  ibkr-order-events-20260421-160019-DU1234567-AAPL-10.json  ibkr-order-events-20260421-160135-DU1234567-AAPL-10.json  ibkr-order-events-20260421-160208-DU1234567-AAPL-10.json  ibkr-order-events-20260421-170413-DU1234567-AAPL-10.json  ibkr-order-events-20260421-170841-DU1234567-AAPL-10.json  ibkr-order-events-20260421-173230-DU1234567-AAPL-10.json  ibkr-order-events-20260421-173257-DU1234567-AAPL-10.json
crates/ibkr-options-engine/src/: artifacts.rs  cli.rs  config.rs  execution.rs  ibkr.rs  lib.rs  main.rs  market_data.rs  models.rs  paper_state.rs  reporting.rs  scanner.rs  scoring.rs  state.rs  strategy.rs
docs/: 260421_Plan.md  50_stocks_list.csv  5_stocks_list.csv  5_stocks_list_Powershell  IBKR_ACCOUNT_OPS.md  MANUAL_SETUP.md  PROJECT_REVIEW.md  RUST_IBKR_SCAFFOLD.md  Trades_Executed.xlsx  nasdaqlisted.txt  nasdaqlisted_symbols.csv  nasdaqlisted_symbols_for_sorting.csv  nasdaqlisted_symbols_sorted.csv  starter_watchlist.csv
docs/local/: ibkr-options-engine.example.toml  (+1 more)
(+13 files in other folders)
